--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>HTML RECIPES</h1>
+    <a href="recipe/lasagna.html" target="_blank" rel="noopener noreferrer">LASAGNA RECIPE</a>
 </body>
 </html>
